--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "@susicky/eslint-config-react",
   "version": "1.0.0",
   "description": "Pavel Susicky's personal ESLint configuration for React based projects",
-  "main": "lib/index.js",
+  "main": "index.js",
+  "files": [
+    "index.js"
+  ],
   "scripts": {},
   "peerDependencies": {
     "eslint": "^8.0.0"
   },
-  "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^8.13.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Thesoreon/eslint-config-react.git"
